# czolko-song-api

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  README.md  pyproject.toml
app/: __main__.py  app_factory.py  auth.py  config.py  db.py  models.py
app/routes/: editor.py  public.py  web.py
app/static/: app.js  styles.css
app/templates/: base.html  editor.html  login.html
data/: default_songs.json
deploy/: DEPLOY.md  app.env.example  czolko-songs-api.service  manage.sh  setup.sh
docs/superpowers/plans/: 2026-06-13-czolko-songs-api.md
docs/superpowers/specs/: 2026-06-13-czolko-songs-api-design.md
tests/: conftest.py  test_auth.py  test_auth_unit.py  test_config.py  test_crud.py  test_models.py  test_public.py  test_seed.py
